--- a/Front-end/Admin.html
+++ b/Front-end/Admin.html
@@ -11,10 +11,10 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
-  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
         <script src="gideonApp.js"></script>
         <script src="adminCtrl.js"></script>
-		<script src="ripple.js"></script>
+		<!--script src="ripple.js"></script-->
 
 		<link rel="manifest" href="/site.webmanifest">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -24,6 +24,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.css">
         <link rel="stylesheet" type="text/css" href="SiteStyle.css">
         <link rel="stylesheet" type="text/css" href="DemoStyle.css">
 	</head>
@@ -34,16 +35,16 @@
 		
 		<!--Admin control-->
 		<div ng-controller="adminCtrl" class="container">
-            <button invis class="hoverable" id="backButton" ng-click="backButton()">Back</button>
+            <md-button invis id="backButton" ng-click="backButton()">Back</md-button>
 
             <div ng-show="loggedIn" ng-hide="!loggedIn" class="container" id="content">
                 <h1>Admin Settings</h1>
                 <br>
-                <button big ng-click="shiftGrades(true)">Increment Global Grades (to be run every August 1st)</button>
-                <br>
-                <button big ng-click="shiftGrades(false)">Decrement Global Grades (to be run in the event of a mistake)</button>
-                <br>
-                <button big warn ng-click="terminate()">Terminate Account</button>
+                <md-button big class="md-accent md-raised" ng-click="shiftGrades(true)">Increment Global Grades (to be run every August 1st)</md-button>
+                <br><br>
+                <md-button big class="md-accent md-raised" ng-click="shiftGrades(false)">Decrement Global Grades (to be run in the event of a mistake)</md-button>
+                <br><br><br><br>
+                <md-button big class="md-warn md-raised" ng-click="terminate()">Terminate Account</md-button>
 			</div>
 		</div>
 	</body>
