--- a/Front-end/Demo.html
+++ b/Front-end/Demo.html
@@ -11,10 +11,10 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
-  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
         <script src="gideonApp.js"></script>
         <script src="demoCtrl.js"></script>
-		<script src="ripple.js"></script>
+		<!--script src="ripple.js"></script-->
 
 		<link rel="manifest" href="/site.webmanifest">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -24,6 +24,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.css">
         <link rel="stylesheet" type="text/css" href="SiteStyle.css">
         <link rel="stylesheet" type="text/css" href="DemoStyle.css">
 	</head>
@@ -34,7 +35,7 @@
 		
 		<!--Demo control-->
 		<div ng-controller="demoCtrl" class="container">
-            <button invis class="hoverable" id="backButton" ng-click="backButton()">Back</button>
+            <md-button invis id="backButton" ng-click="backButton()">Back</md-button>
             <div id="content">
                 <h1>About Demo Mode</h1>
                 <br>
