Remove ripple.js
Time to deprecate for real this time

--- a/Front-end/Header.html
+++ b/Front-end/Header.html
@@ -1,3 +1,15 @@
+<!--
+    HEADER.HTML
+    Not meant to be used as a standalone file.
+
+    How to use: Put this html at the top of a page:
+    <div ng-controller="header">
+		<div ng-include="'Header.html'"></div>
+    </div>
+    
+    File expects SiteStyle.css to be in effect.
+-->
+
 <md-toolbar id = "siteHeader">
     <div class="md-toolbar-tools">
         <md-button md-ink-ripple="#FFFFFF" class="icon" aria-label="Back" ng-click="back()">
