--- a/Front-end/UpdateRecord.html
+++ b/Front-end/UpdateRecord.html
@@ -1,3 +1,10 @@
+<!--
+    UPDATERECORD.HTML
+    The form elements which are shared by both insert and edit pages.
+
+    NOTE: Does not include the md-autocomplete selection for the student name. This is because md-autocomplete is very uncooperative and will not work in conjunction with ng-include.
+-->
+
 <div class="columnContainer" id="editRow">
    <!--Displays all possible book categories-->
     <div class="threeColumn">
