--- a/Front-end/UpdateStudent.html
+++ b/Front-end/UpdateStudent.html
@@ -1,3 +1,8 @@
+<!--
+    UPDATESTUDENT.HTML
+    The form elements which are shared by both insert and edit pages.
+-->
+
 <div class="columnContainer" id="editRow">
     <!--Name input, required field-->
     <div class="twoColumn">
